homeworks/dskvyra/module-03/lesson-08/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: course-app
  namespace: course-app-ns
spec:
  replicas: 10
  selector:
    matchLabels:
      app: course-app
  strategy:
    type: Recreate
#    type: RollingUpdate
#    rollingUpdate:
#      maxUnavailable: 1
#      maxSurge: 2
  template:
    metadata:
      labels:
        app: course-app
    spec:
      containers:
        - name: course-app
          image: holymykolay/course-app:0.1
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
