homeworks/dskvyra/module-03/lesson-08/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: course-app-ingress
  namespace: course-app-ns
spec:
  ingressClassName: traefik
  rules:
  - host: course-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: course-app-service
            port:
              number: 8080
